@@ -205,7 +205,13 @@ class MP_Shipping_Table_Rate extends MP_Shipping_API {
 	 *  array. Don't forget to return!
 	 */
 	function process_shipping_settings($settings) {
-	
+		//sanitize the price fields
+		function sanitize_rates(&$value, $key) {
+			global $mp;
+			if (!is_array($value))
+				$value = $mp->display_currency(preg_replace('/[^0-9.]/', '', $value));
+		}
+		array_walk_recursive($settings['shipping']['table-rate'], 'sanitize_rates');
 		return $settings;
 	}
 	
@@ -216,7 +222,7 @@ class MP_Shipping_Table_Rate extends MP_Shipping_API {
 	 * @param array $settings, access saved settings via $settings array.
 	 */
 	function shipping_metabox($shipping_meta, $settings) {
-
+		
 	}
 	
 	/**
